; ModuleID = '/home/carl/AnghaBench/openvpn/src/openvpn/extr_interval.c_interval_init.c'
source_filename = "/home/carl/AnghaBench/openvpn/src/openvpn/extr_interval.c_interval_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.interval = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @interval_init(%struct.interval* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.interval*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.interval* %0, %struct.interval** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.interval*, %struct.interval** %4, align 8
  %8 = bitcast %struct.interval* %7 to i64*
  %9 = load i64, i64* %8, align 4
  %10 = call i32 @CLEAR(i64 %9)
  %11 = load i32, i32* %6, align 4
  %12 = load %struct.interval*, %struct.interval** %4, align 8
  %13 = getelementptr inbounds %struct.interval, %struct.interval* %12, i32 0, i32 0
  store i32 %11, i32* %13, align 4
  %14 = load i32, i32* %5, align 4
  %15 = load %struct.interval*, %struct.interval** %4, align 8
  %16 = getelementptr inbounds %struct.interval, %struct.interval* %15, i32 0, i32 1
  store i32 %14, i32* %16, align 4
  ret void
}

declare dso_local i32 @CLEAR(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
